--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "sass": "^1.68.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
-    "typescript": "^5"
+    "jsdom": "^22.1.0",
+    "typescript": "^5",
+    "vitest": "^0.34.6"
   }
 }
