--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "vitest"
   },
   "dependencies": {
-    "antd": "^5.9.4",
+    "@hookform/resolvers": "^3.3.1",
+    "antd": "^5.10.0",
+    "antd-css-utilities": "^2.0.3",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.68.0"
+    "react-hook-form": "^7.47.0",
+    "sass": "^1.68.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
