--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@hookform/resolvers": "^3.3.1",
     "antd": "^5.10.0",
     "antd-css-utilities": "^2.0.3",
+    "g": "^2.0.1",
     "next": "13.5.4",
     "react": "^18",
+    "react-countup": "^6.4.2",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "sass": "^1.68.0",
+    "yarn": "^1.22.19",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
+    "@storybook/addon-a11y": "^7.4.6",
     "@storybook/addon-actions": "^7.4.6",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
